syntax = "proto3";

option csharp_namespace = "FudanFPGA.CrossUI.Web.RPC";

package Rpc;

service FPGARpc {
	rpc WriteReadFPGA (FPGARpcRequest) returns (FPGARpcResponse);
}

message FPGARpcRequest {
	uint64 write_data = 1;
}

message FPGARpcResponse {
	uint64 read_data = 1;
}